--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 	 <dependency>
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-test</artifactId>
@@ -45,6 +49,18 @@
 	  <artifactId>junit</artifactId>
 	  <version>4.12</version>
 	  <scope>test</scope>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>javax.persistence</groupId>
+	  <artifactId>javax.persistence-api</artifactId>
+	  <version>2.2</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.owlike</groupId>
+	  <artifactId>genson</artifactId>
+	  <version>1.3</version>
 	  <type>jar</type>
 	 </dependency>
 	</dependencies>
